--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,17 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.navbar-nav .nav-item.active .nav-link {
+  background-color: #00ff40;
+  color: #ff0000;
+}
+
+.nav-item {
+  color: #ff0000;
 }
